export class CancelSubscriptionCommand {
  constructor(public subscriptionId: string) {}
}
