export class GetInvoicesQuery {
  constructor(public customerId: string) {}
}
