import { environment } from '../../.././environment/environment';

export class PaymentApi {
  protected baseUrl = `${environment.baseUrl}/payment`;
}
